<resources>
    <string name="app_name">Genius Plaza</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin         \\n\\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>
    <string name="getting_users">Getting Users</string>
    <string name="retry">Retry</string>
    <string name="retry_text">Fail to fetch Data</string>
    <string name="user_click_message"> clicked</string>
    <string name="user_long_click_message">Long click</string>
    <string name="sign_up_text">Infinite knowledge awaits!</string>
    <string name="fill_the_form_below_and_let_s_get_you_started">Fill the form below and let\'s get you started.</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Your Name</string>
    <string name="job">Your Job Title</string>
    <string name="registering_user">Registering user</string>
    <string name="network_disconnected">Network Disconnected</string>
</resources>