<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="@dimen/appbar_min_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_min_height">

            <ImageButton
                android:id="@+id/backButton"
                style="?selectableItemBackgroundBorderless"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_xlarge"
                android:layout_marginRight="@dimen/spacing_xlarge"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/fill_the_form_below_and_let_s_get_you_started"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/loginForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xlarge">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/nameATV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/jobET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/job"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:theme="@style/Button.Primary" />


                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
